--- a/.github/workflows/send-to-discovery.yml
+++ b/.github/workflows/send-to-discovery.yml
@@ -25,7 +25,7 @@ jobs:
         api_host: ${{ env.API_HOST }}
         platform_api_prefix: ${{ env.PLATFORM_API_PREFIX }}
         provider_org: ${{ env.PROVIDER_ORG }}
-        api_key: ${{ secrets.apicApikey_participant_0 }}
+        api_key: ${{ 48173cf1-f5c3-4d99-9a76-e03c1533882e }}
         api_files: ${{ env.API_FILES }}
         api_folders: ${{ env.API_FOLDERS }}
         resync_check: ${{ true }}
