--- a/.github/workflows/send-to-discovery.yml
+++ b/.github/workflows/send-to-discovery.yml
@@ -22,9 +22,9 @@ jobs:
     - uses: ibm-apiconnect/apic-discovery-action@main 
       id: discover-apis
       with:
-        api_host: ${{apim.mgmt.apic.fishery.castle.fyre.ibm.com}}
-        platform_api_prefix: ${{ platform.mgmt.apic.fishery.castle.fyre.ibm.com }}
-        provider_org: ${{ test }}
+        api_host: apim.mgmt.apic.fishery.castle.fyre.ibm.com
+        platform_api_prefix: platform.mgmt.apic.fishery.castle.fyre.ibm.com 
+        provider_org: test
         api_key: ${{ secrets.apicApikey_participant_12 }}
         api_files: ${{ env.API_FILES }}
         api_folders: ${{ env.API_FOLDERS }}
