--- a/.github/workflows/send-to-discovery.yml
+++ b/.github/workflows/send-to-discovery.yml
@@ -25,7 +25,7 @@ jobs:
       id: discover-apis
       with:
         api_host: apim.mgmt.apic.fishery.castle.fyre.ibm.com
-        platform_api_prefix: platform.mgmt.apic.fishery.castle.fyre.ibm.com 
+        platform_api_prefix: platform
         provider_org: test
         api_key: ${{ secrets.test }}
         api_files: ${{ env.API_FILES }}
