--- a/.github/workflows/send-to-discovery.yml
+++ b/.github/workflows/send-to-discovery.yml
@@ -3,8 +3,8 @@ name: Send Discovered API to ApiConnect
 on: [pull_request, workflow_dispatch, push]
 
 env:
-  API_HOST: us-east-a.apiconnect.automation.ibm.com
-  PROVIDER_ORG: api-connect-fo-0
+  API_HOST: https://api-manage-419dfdff-api-manager-tech-jam-apic.tj-isa-4-420eb34f056ae68f3969289d61f61851-0000.jp-tok.containers.appdomain.cloud
+  PROVIDER_ORG: tech-jam-18
   API_FILES: APIfolder/photos.yaml
   PLATFORM_API_PREFIX: true
   INSECURE_SKIP_TLS_VERIFY: true
@@ -24,9 +24,9 @@ jobs:
     - uses: ibm-apiconnect/apic-discovery-action@main 
       id: discover-apis
       with:
-        api_host: apim.mgmt.apic.fishery.castle.fyre.ibm.com
-        platform_api_prefix: platform
-        provider_org: test
+        api_host: ${{ env.API_HOST }}
+        platform_api_prefix: ${{ env.PLATFORM_API_PREFIX }}
+        provider_org: ${{ env.PROVIDER_ORG }}
         api_key: ${{ secrets.test_18_18 }}
         api_files: ${{ env.API_FILES }}
         api_folders: ${{ env.API_FOLDERS }}
