--- a/.github/workflows/send-to-discovery.yml
+++ b/.github/workflows/send-to-discovery.yml
@@ -6,7 +6,7 @@ env:
   API_HOST: https://api-manage-419dfdff-api-manager-tech-jam-apic.tj-isa-4-420eb34f056ae68f3969289d61f61851-0000.jp-tok.containers.appdomain.cloud
   PROVIDER_ORG: tech-jam-18
   API_FILES: APIfolder/photos.yaml
-  PLATFORM_API_PREFIX: true
+  PLATFORM_API_PREFIX: api-manage-419dfdff-api-manager-tech-jam-apic
   INSECURE_SKIP_TLS_VERIFY: true
   #API_FILES: APIfolder/uber-api.json
   #API_FILES: APIfolder/coffee-store.yaml
